--- a/calc.css
+++ b/calc.css
@@ -8,26 +8,35 @@
   width: 500px;
   height: 700px;
   margin-top: 50px;
-
+  overflow: auto;    /*The margins dont collide this way*/
 }
 
 .screen{
 margin-top: 50px;
-margin-left: 50px;
+margin-left: 28px;
 border-radius: 25px;
-position: relative;
 background-color: #f5f771;
 text-align: right;
-font-size: 26px;
+font-size: 38px;
 font-weight: bold;
-width:400px;
-height:60px;
+width:450px;
+height:70px;
+/*overflow: auto;*/
+padding-top: 1px;
+}
+
+.screen-text{
+	margin-top: 10px;
+	margin-right: 5px;
+	position: :relative;
+	/*top:0;
+	right:0;*/
 }
 
 .buttons{
-	margin-top: 100px;
-	margin-left: 70px;
-	width:400px;
+	margin-top: 40px;
+	margin-left: 28px;
+	width:450px;
 	height: 500px;
 }
 
@@ -38,8 +47,8 @@ height:60px;
 	background-color: gray;
 	font-size: 50px;
 	color:black;
-	width:70px;
-	height:70px;
+	width:85px;
+	height:85px;
 	
 
 }
